main/bin/main.80151.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:238:39: error: no member named 'inf_queue' in 'struct PopVar'
                        StateT[index].inf_queue[StateT[index].current].inf_queue_infect_type = -1;              
                        ~~~~~~~~~~~~~ ^
1 warning and 1 error generated.
